# TM-700-VS

./: README.md
control_robot/: CMakeLists.txt  package.xml
control_robot/src/scripts/: move_robot_node.py
visual_servoing/: CMakeLists.txt  package.xml
visual_servoing/launch/: visual_servoing.launch
visual_servoing/scripts/: visual_servoing_node.py
